--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
     <div class="header">
         <h1>TRAFFIC MONITOR v1.0 - UNIVERSAL LOG SYSTEM</h1>
         <div class="stats">
-            <span>Connected: <span class="status" id="connected">0</span></span>
             <span>Total Logs: <span class="status" id="totalLogs">0</span></span>
-            <span>Status: <span class="status" id="status">CONNECTING...</span></span>
+            <span>Status: <span class="status" id="status">LOADING...</span></span>
         </div>
     </div>
     
